--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ body {
     position: relative;
     z-index: 2;
 }
+
+.hero h1 span {
+    font-family: "Chewy", serif;
+}
 .hero p {
     font-size: 20px;
     max-width: 600px;
@@ -76,7 +80,7 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 33%;
+    height: 60%;
     overflow: hidden;
     z-index: 1;
 }
