--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
     padding: 0;
     background: #0a0a0a;
     color: #fff;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Inter", serif;
+    font-weight: 400;
     overflow-x: hidden;
 }
 .header {
@@ -23,6 +24,7 @@ body {
     font-family: "Chewy", serif;
     font-weight: 400;
     font-style: normal;
+    font-size: x-large;
     margin-left: 20px;
     text-transform: uppercase;
     text-shadow: 0 0 15px #A020F0;
@@ -67,9 +69,10 @@ body {
     font-size: 20px;
     max-width: 600px;
     margin-top: 10px;
-    opacity: 0.8;
+    opacity: 1;
     position: relative;
     z-index: 2;
+    text-shadow: 0 0 15px black;
 }
 .hero img{
     filter: drop-shadow(0px 0px 15px rgb(253, 255, 230));
@@ -80,7 +83,7 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 60%;
+    height: 100%;
     overflow: hidden;
     z-index: 1;
 }
@@ -91,7 +94,7 @@ body {
     width: 100%;
     height: 100%;
     background: url('https://static.vecteezy.com/system/resources/thumbnails/009/374/897/small/fog-design-clean-alpha-free-png.png') center/cover;
-    opacity: 1;
+    opacity: .8;
     animation: fogAnimation 20s linear infinite;
 }
 @keyframes fogAnimation {
