--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
     margin-right: 20px;
 }
 .menu a {
+    margin-top:10px;
     color: #fff;
     text-decoration: none;
     font-size: 18px;
