--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #0d002c;
+    background: #161616;
     color: #fff;
     font-family: "Inter", serif;
     font-weight: 400;
@@ -44,6 +44,19 @@ body {
     color: #f5e6ff;
     text-shadow: 0 0 15px #A020F0;
 }
+
+.menu img{
+    
+    -webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.menu img:hover{
+    filter: drop-shadow(0px 0px 15px #A020F0);
+    -webkit-transform: scale(1.3);
+	transform: scale(1.05);
+}
+
 .hero {
     height: 100vh;
     display: flex;
@@ -53,11 +66,12 @@ body {
     text-align: center;
     background: url('../img/background.png') center/cover;
     overflow: hidden;
-    border-bottom: solid black;
+    border-bottom: solid #080808;
 }
 .hero h1 {
     font-size: 48px;
     text-transform: uppercase;
+    font-family: "Bebas Neue", serif;
     text-shadow: 0 0 15px #A020F0;
     position: relative;
     z-index: 2;
@@ -76,7 +90,7 @@ body {
     text-shadow: 0 0 15px black;
 }
 .hero figure img{
-    filter: drop-shadow(0px 0px 15px rgb(253, 255, 230));
+    filter: drop-shadow(0px 0px 15px rgb(253, 255, 255));
     -webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
 }
@@ -113,4 +127,40 @@ body {
 
 section h2{
     text-align: center;
+    font-family: "Bebas Neue", serif;
+    font-style: normal;
+    font-size: xx-large;
+    padding-bottom: 15px;
+}
+.team {
+    padding-bottom: 20px;
+}
+
+.team_container{
+    display: flex;
+    gap:15px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content:space-between;
+    margin: 0 auto;
+}
+
+.team h2 {
+    padding-top: 20px;
+}
+.discordTeam{
+    display: flex;
+    gap:10px;
+    padding-top:10px
+}
+.twitchTeam {
+    padding-top:10px;
+    display: flex;
+    gap:10px;
+}
+
+.discordTeam img {
+    filter: drop-shadow(0px 0px 5px rgb(0, 0, 0));
 }
