--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,23 @@ body {
     color: #fff;
     text-decoration: none;
     font-size: 18px;
-    transition: 0.3s;
+    background-image: linear-gradient(#ffffff 0 0);
+    background-position: 0 100%; /*OR bottom left*/
+    background-size: 0% 2px;
+    background-repeat: no-repeat;
+    transition:
+    background-size 0.3s,
+    background-position 0s 0.3s; /*change after the size immediately*/
 }
+
+
 .menu a:hover {
     color: #f5e6ff;
     text-shadow: 0 0 15px #A020F0;
+    background-position: 100% 100%; /*OR bottom right*/
+    background-size: 100% 2px;
 }
+
 
 .menu img{
     
